--- a/app/src/main/res/layout/activity_single_book_description.xml
+++ b/app/src/main/res/layout/activity_single_book_description.xml
@@ -6,6 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".Activities.SingleBookDescription"
     android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/downloadProgresBar"
+    android:visibility="gone">
+    <ProgressBar
+        android:indeterminateTint="@color/colordarkblue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1">
+
+    </ProgressBar>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Downloading ..."
+        android:layout_weight="1">
+
+    </TextView>
+</LinearLayout>
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_actionbar_description_view"
@@ -22,7 +45,8 @@
         android:text="TITLE TEXT VIEW"
         android:textAlignment="center"
         android:textSize="30dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/textView16"
