--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.AllBooks"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,15 +80,12 @@
             android:layout_marginBottom="0dp" >
 
         </SearchView>
-        <View
-            android:id="@+id/SplitLine_hor2"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#000" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
 
 
@@ -135,21 +134,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <View
             android:id="@+id/SplitLine_hor1"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="#000" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/booksListView"
-            android:divider = "#000"
-            android:dividerHeight = "1dp">
 
-        </ListView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:id="@+id/booksListView"
+                    android:divider = "#000"
+                    android:dividerHeight = "1dp"
+                    android:layout_weight="1">
+
+                </ListView>
+            </LinearLayout>
+
+
+
+
     </LinearLayout>
 
 </LinearLayout>
