Commit with fixed back button listeners

--- a/app/src/main/res/layout/singlebookitem.xml
+++ b/app/src/main/res/layout/singlebookitem.xml
@@ -115,7 +115,7 @@
         android:gravity="center">
         <ImageView
             android:layout_width="205dp"
-            android:layout_height="205dp"
+            android:layout_height="wrap_content"
             android:id="@+id/singleBookImageView">
 
         </ImageView>
