--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -18,23 +18,19 @@
             android:id="@+id/toolbar_actionbar"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@color/colorLightGrey"
             android:gravity="center_vertical"
             app:navigationIcon="?attr/homeAsUpIndicator" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:gravity="center">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
             <TextView
                 android:id="@+id/allBooksActivityTitleTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
+                android:gravity="center_horizontal"
                 android:text="Booklist"
                 android:textAlignment="center"
                 android:textColor="#2626c4"
@@ -45,12 +41,13 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <Button
                 android:id="@+id/logoutButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_gravity="right"
                 android:background="@android:drawable/ic_lock_power_off" />
 
