--- a/app/src/main/res/layout/activity_single_book_description.xml
+++ b/app/src/main/res/layout/activity_single_book_description.xml
@@ -5,93 +5,133 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.SingleBookDescription"
-    android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/downloadProgresBar"
-    android:visibility="gone">
-    <ProgressBar
-        android:indeterminateTint="@color/colordarkblue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1">
-
-    </ProgressBar>
-    <TextView
+    android:layout_marginLeft="3dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginRight="3dp">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Downloading ..."
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
-    </TextView>
-</LinearLayout>
-
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_actionbar_description_view"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:navigationIcon="?attr/homeAsUpIndicator"
-        android:background="@color/colorLightGrey"
-        android:gravity="center_vertical" />
-
-    <TextView
-        android:id="@+id/bookTitleDescriptionTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TITLE TEXT VIEW"
-        android:textAlignment="center"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal" />
-
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description : "
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:textStyle="italic"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="80dp">
-
-        <TextView
-            android:id="@+id/bookDescriptionTextTextView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="HERE WILL SHOW BOOK'S DESCRIPTION" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:id="@+id/downloadProgresBar"
+                android:visibility="gone">
+                <ProgressBar
+                    android:indeterminateTint="@color/colordarkblue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1">
+
+                </ProgressBar>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Downloading ..."
+                    android:layout_weight="1">
+
+                </TextView>
+            </LinearLayout>
 
 
-    <Button
-        android:id="@+id/addToMyBooksButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorLightGrey"
-        android:text="Add to myBooks" />
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_actionbar_description_view"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:navigationIcon="?attr/homeAsUpIndicator"
+                android:gravity="center_vertical" />
 
-    <Button
-        android:id="@+id/backToAllBooksButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colordarkgray"
-        android:text="Back to all Books" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:id="@+id/bookTitleDescriptionTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TITLE TEXT VIEW"
+                    android:textAlignment="center"
+                    android:textSize="30dp"
+                    android:textStyle="bold"
+                    android:gravity="center_horizontal"
+                    android:layout_marginBottom="5dp"/>
 
-    <Button
-        android:id="@+id/readButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Read"
-        android:textAllCaps="false"
-        android:background="@color/colordarkblue"
-        android:visibility="visible"/>
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:id="@+id/bookDescriptionImageView">
+
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Description: "
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:textStyle="italic|bold"/>
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="80dp">
+
+                <TextView
+                    android:id="@+id/bookDescriptionTextTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="HERE WILL SHOW BOOK'S DESCRIPTION" />
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/addToMyBooksButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_drawable"
+                android:text="Add to myBooks"
+                android:layout_gravity="center"
+                android:layout_margin="3dp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+               />
+
+            <Button
+                android:id="@+id/backToAllBooksButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_drawable"
+                android:backgroundTint="@color/colorgray"
+                android:text="Back to all Books"
+                android:layout_gravity="center"
+                android:layout_margin="3dp"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/readButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Read"
+                android:textAllCaps="false"
+                android:background="@drawable/button_drawable"
+                android:visibility="visible"
+                android:layout_margin="3dp"
+                android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+    </ScrollView>
+
 
 </LinearLayout>
