--- a/app/src/main/res/layout/activity_single_book_description.xml
+++ b/app/src/main/res/layout/activity_single_book_description.xml
@@ -59,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:text="TITLE TEXT VIEW"
                     android:textAlignment="center"
-                    android:textSize="30dp"
+                    android:textSize="26sp"
                     android:textStyle="bold"
                     android:gravity="center_horizontal"
                     android:layout_marginBottom="5dp"/>
