--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="colorpink">#f092b0</color>
     <color name="colorgray">#b7c0c7</color>
     <color name="colorWhite">#fff</color>
+    <color name="colorBlack">#000</color>
 
 </resources>
