--- a/app/src/main/res/layout/activity_single_book_description.xml
+++ b/app/src/main/res/layout/activity_single_book_description.xml
@@ -35,7 +35,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Downloading ..."
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_gravity="center_horizontal">
 
                 </TextView>
             </LinearLayout>
