--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="Hello Bookeater!"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textColor="#2626c4"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -50,7 +50,7 @@
             android:layout_marginBottom="5dp"
             android:text="Welcome to your personal bookstore!"
             android:textColor="#2626c4"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textSize="21sp"
             android:textStyle="bold"/>
 
@@ -90,11 +90,12 @@
         android:id="@+id/viewAllAvailableBooksButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="View all Available Books"
+        android:text="View All Available Books"
         android:textColor="@color/colorLightGrey"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp"
-        android:background="#2626c4"/>
+        android:background="@drawable/button_drawable"
+        android:textAllCaps="false"/>
 
     <Button
         android:id="@+id/myBooksButton"
@@ -104,7 +105,7 @@
         android:textAllCaps="false"
         android:textColor="@color/colorLightGrey"
         android:layout_marginBottom="5dp"
-        android:background="#2626c4"/>
+        android:background="@drawable/button_drawable"/>
 
     <Button
         android:id="@+id/continueReadingButton"
@@ -112,6 +113,7 @@
         android:layout_height="wrap_content"
         android:text="Continue Reading"
         android:textColor="@color/colorLightGrey"
-        android:background="#2626c4"/>
+        android:background="@drawable/button_drawable"
+        android:textAllCaps="false"/>
 
 </LinearLayout>
