--- a/app/src/main/res/layout/activity_single_book_description.xml
+++ b/app/src/main/res/layout/activity_single_book_description.xml
@@ -9,6 +9,29 @@
     android:layout_marginLeft="3dp"
     android:layout_marginTop="3dp"
     android:layout_marginRight="3dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/downloadProgresBar"
+        android:visibility="gone">
+        <ProgressBar
+            android:indeterminateTint="@color/colordarkblue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1">
+
+        </ProgressBar>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Downloading ..."
+            android:layout_weight="1"
+            android:gravity="center_horizontal">
+
+        </TextView>
+    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,29 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:id="@+id/downloadProgresBar"
-                android:visibility="gone">
-                <ProgressBar
-                    android:indeterminateTint="@color/colordarkblue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1">
 
-                </ProgressBar>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Downloading ..."
-                    android:layout_weight="1"
-                    android:layout_gravity="center_horizontal">
-
-                </TextView>
-            </LinearLayout>
 
 
             <android.support.v7.widget.Toolbar
