--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.AllBooks"
-    android:orientation="vertical"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,7 +33,8 @@
                 android:textAlignment="center"
                 android:textColor="#2626c4"
                 android:textSize="30sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginRight="30dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -141,7 +140,9 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginRight="3dp"
+                android:layout_marginLeft="3dp">
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
