--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -141,15 +141,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginRight="3dp"
-                android:layout_marginLeft="3dp">
+             >
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:id="@+id/booksListView"
-                    android:divider = "#000"
-                    android:dividerHeight = "1dp"
-                    android:layout_weight="1">
+                    android:divider="#000"
+                    android:dividerHeight="1dp"
+                    android:layout_weight="1"
+                    android:layout_marginRight="3dp"
+                    android:layout_marginLeft="3dp">
 
                 </ListView>
             </LinearLayout>
