--- a/app/src/main/res/layout/activity_register_form.xml
+++ b/app/src/main/res/layout/activity_register_form.xml
@@ -34,6 +34,7 @@
 
     <EditText
         android:id="@+id/emailET"
+        android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10" />
