Commit with added price holders on views, username welcome message and added intent to book details after click on the image of book

--- a/app/src/main/res/layout/singlebookitem.xml
+++ b/app/src/main/res/layout/singlebookitem.xml
@@ -15,7 +15,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="3dp">
 
 
             <TextView
@@ -77,12 +78,19 @@
                 android:layout_weight="1"/>
 
             <TextView
-                android:id="@+id/bookISBNTV"
+                android:id="@+id/bookpriceStaticTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Description: "
-                android:visibility="gone"/>
+                android:text="Price: "
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/bookpriceTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="visible"
+                android:textColor="@color/colorlightblue"/>
         </LinearLayout>
 
         <LinearLayout
