--- a/app/src/main/res/layout/activity_single_book_description.xml
+++ b/app/src/main/res/layout/activity_single_book_description.xml
@@ -32,6 +32,16 @@
 
         </TextView>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_actionbar_description_view"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            android:gravity="center_vertical" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -40,15 +50,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
-
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_actionbar_description_view"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                app:navigationIcon="?attr/homeAsUpIndicator"
-                android:gravity="center_vertical" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -79,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:text="Description: "
                     android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="10dp"
                     android:textStyle="italic|bold"/>
             </LinearLayout>
 
@@ -89,13 +90,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="80dp">
+                android:layout_marginBottom="30dp">
 
                 <TextView
                     android:id="@+id/bookDescriptionTextTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="HERE WILL SHOW BOOK'S DESCRIPTION" />
+                    android:text="HERE WILL SHOW BOOK'S DESCRIPTION"
+                    android:layout_marginBottom="4dp"/>
+
+                <TextView
+                    android:id="@+id/bookpriceTextTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Price: "
+                    android:layout_marginBottom="4dp"
+                    android:textStyle="italic|bold"/>
+
+                <TextView
+                    android:id="@+id/bookpriceTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorlightblue"
+                  />
+
             </LinearLayout>
 
 
@@ -135,5 +153,5 @@
         </LinearLayout>
     </ScrollView>
 
-
+    </LinearLayout>
 </LinearLayout>
