--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.MainActivity"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp">
+    tools:context=".Activities.MainActivity">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,7 +69,7 @@
         <ImageView
             android:id="@+id/booksImageView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
             android:layout_marginBottom="5dp" />
     </LinearLayout>
 
@@ -67,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="45dp">
+        android:layout_marginBottom="30dp">
 
         <TextView
             android:id="@+id/textView2"
@@ -93,7 +104,7 @@
         android:layout_height="wrap_content"
         android:text="View All Available Books"
         android:textColor="@color/colorLightGrey"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/button_drawable"
         android:textAllCaps="false"/>
@@ -116,5 +127,10 @@
         android:textColor="@color/colorLightGrey"
         android:background="@drawable/button_drawable"
         android:textAllCaps="false"/>
+
+
+    </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
