--- a/app/src/main/res/layout/activity_buy_book.xml
+++ b/app/src/main/res/layout/activity_buy_book.xml
@@ -143,6 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
+            android:textColor="@color/colorBlack"
             android:layout_marginRight="3dp"
             android:layout_marginLeft="3dp"
             android:textStyle="bold"
