Commit with latest changes

--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -47,9 +47,11 @@
         android:layout_marginBottom="2dp">
 
         <SearchView
+            android:id="@+id/bookSearchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp" >
+            android:layout_marginBottom="0dp"
+            >
 
         </SearchView>
 
